--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    <string name="app_name">Phonebook</string>
-    <string name="input_edit_text">Number</string>
-    <string name="send_otp_text">Send OTP</string>
-    <string name="enter_otp">Enter OTP</string>
-    <string name="verify_code">Verify Code</string>
+    <string name="app_name">Firebase Auth</string>
+    <string name="input_number_hint">Input Number</string>
+    <string name="continue_btn">Continue</string>
+    <string name="verify_btn">VERIFY</string>
 </resources>
